# anxiousbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite-env.d.ts  vite.config.js  vite.config.ts
.github/workflows/: deploy.yml  destroy.yml  update.yml
ansible/: ansible.cfg  anxiousbot.service  playbook.yml
ansible/inventory/: aws_ec2.yaml
ansible/vars/: secrets.yml
anxiousbot/: __init__.py  app.py  bot_app.py  bot_handler.py  calculation_handler.py  config_handler.py  deal.py  deal_handler.py  dealer.py  dealer_app.py  exchange.py  exchange_handler.py  log.py  main.py  notifier.py  order_book_handler.py  redis_handler.py  runner.py  trade_handler.py  trader_handler.py  trio_dealer_app.py  updater.py  util.py
anxiousbot/scripts/: config.py  config_local.py  config_param.py  debug.py  format.py  groups.py  list.py  marketcap.py  symbols.py  test_bot.py  updater.py
config/: config-0.json  config-1.json  config-10.json  config-100.json  config-101.json  config-102.json  config-103.json  config-104.json  config-105.json  config-106.json  config-107.json  config-108.json  config-109.json  config-11.json  config-110.json  config-111.json  config-112.json  config-113.json  config-114.json  config-115.json  config-116.json  config-117.json  config-118.json  config-119.json  config-12.json  config-13.json  config-14.json  config-15.json  config-16.json  config-17.json  config-18.json  config-19.json  config-2.json  config-20.json  config-21.json  config-22.json  config-23.json  config-24.json  config-25.json  config-26.json  (+86 more)
deploy/ansible/: ansible.cfg  anxiousbot.service  playbook-setup.yml  playbook-update.yml  playbook.yml  s3sync.sh
deploy/ansible/inventory/: aws_ec2.yaml
deploy/ansible/vars/: secrets.yml
deploy/terraform/: .terraform.lock.hcl  count_config_files.sh  main.tf
deploy/terraform-bootstrap/: main.tf
deploy/terraform-state/: main.tf
src/: main.js  main.ts
terraform/: main.tf
