[tool.poetry]
name = "anxiousbot"
version = "0.0.1"
description = "trading without patience"
authors = ["Filipe C Menezes <fcmenezes87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"


ccxt = "^4.3.54"
[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "anxiousbot.scripts.format:main"
debug = "anxiousbot.scripts.debug:_main"
start = "anxiousbot.main:main"
